// Copyright 2024 Lightbend Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package org.example.service;

import "kalix/annotations.proto";
import "external_domain.proto";

option java_outer_classname = "ServiceOuterClass";

service MyService {
  option (kalix.codegen) = {
    action: {}
  };

  rpc simpleMethod(MyRequest) returns (org.external.Empty) {}
  rpc streamedOutputMethod(MyRequest) returns (stream org.external.Empty) {}
  rpc streamedInputMethod(stream MyRequest) returns (org.external.Empty) {}
  rpc fullStreamedMethod(stream MyRequest) returns (stream org.external.Empty) {}
}

message MyRequest {}